Tue Mar  9 14:40:45 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan_pub.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/README:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_test.pl:
        Add test to ciao_tests.lst and start from run_test.pl two different cdp's.
        

Tue Mar  9 14:14:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/OMG-CCM-Tutorial.ppt:
          Updated CIF

Tue Mar  9 13:16:38 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.mpc:

          Added dynamicflags omitted from previous commit on file.

Tue Mar  9 13:10:45 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/performance-tests/Latency/Base/Latency_Test_Base.idl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan_pub.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/README:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_pub.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_sub.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_test.pl:
        * connectors/dds4ccm/performance-tests/Latency/Receiver/Latency_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Receiver/Latency_Test_Receiver_exec.h:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender.idl:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.h: